--- a/views/story_templates/three_little_tmpl.html
+++ b/views/story_templates/three_little_tmpl.html
@@ -9,8 +9,8 @@
       <div class="row">
         <div class='col-md-2'></div>
         <div class='col-md-8' id='page'>
-          <h1>Your story</h1>
-          {{name}} had a little {{animal}} it's {{bodyPart}} were {{color}} as {{coloreditem}}. Every where {{name }} went, the {{animal}} was sure to {{action}}.
+          <h1>{{Name}}'s' story</h1>
+          Once there were {{number}} {{animal}}'s. They built a brick {{building}}. The big bad {{animal2}} tried to {{action}} down the {{building}}. But he couldn't and the {{number}} {{animal}}s were safe.
           </div>
         <div class='col-md-2'></div>
 
