--- a/views/lamb_form.html
+++ b/views/lamb_form.html
@@ -6,14 +6,27 @@
   </head>
 
   <body>
-    <h1>Little Buddy</h1>
-    <form class='form-group' id='litte_buddy'>
-    What is your name? <input type="text" name='' ng-model='story.name'>
-    What is your favorite animal? <input type='text' ng-model='story.animal'>
-    What is your Favorite color?<input type='text' ng-model='story.color'>
+    <div class="container-fluid"><!--Main Div-->
 
-    <button ng-click=buildStory() ng-class='btn-success'>Build your story</button>
-    </form>
+      <div class="row">
+        <div class='col-md-2'></div>
+        <div class='col-md-8' id='formpage'>
+          <h1>Little Buddy</h1>
+          <form class='form-group' id='litte_buddy'>
+          What is your name? <input type='text' name='' ng-model='story.name'><br>
+          What is your favorite animal? <input type='text' ng-model='story.animal'><BR>
+          Name a body part<input type='text' ng-model='story.bodyPart'><br>
+          What is your Favorite color?<input type='text' ng-model='story.color'><br>
+          Some thing that is your favorite color.<input type='text' ng-model='story.coloreditem'><br>
+          An action<input type='text' ng-model='story.action'><br>
+
+
+          <button ng-click=buildStory() ng-class='btn-success'>Build your story</button>
+          </form>
+        <div class='col-md-2'></div>
+
+      </div><!--end row -->
+    </div><!-- close main div-->
   </body>
 
 </html>
