--- a/views/index.html
+++ b/views/index.html
@@ -1,3 +1,21 @@
-<h1>Welcome to Fun in the Blanks</h1>
+<!DOCTYPE html>
+<htmL>
+  <head>
+  <link rel='stylesheet' type='text/css' href='css/story.css'>
+  </head>
+  <body>
 
-<button ng-click=chapters()>Chapters</button>
+    <div class="container-fluid"><!--Main Div-->
+
+      <div class='row'>
+        <div class='col-md-2'></div>
+        <div class="col-md-8">
+
+          <h1>Welcome to Fun in the Blanks</h1>
+
+          <button ng-click=chapters()>Chapters</button>
+        </div>
+      </div>
+    </div><!--end main -->
+  </body>
+</htmL>
