--- a/views/threelittle_form.html
+++ b/views/threelittle_form.html
@@ -13,14 +13,14 @@
       <div class='col-md-8' id='formpage'>
         <h1>Three Little Pigs</h1>
         <form class='form-group' id='litte_buddy'>
-        What is your name? <input type='text' name='' ng-model='story.name'>
-        What is your favorite animal? <input type='text' ng-model='story.animal'>
-        Name a kind of building<input type='text' ng-model='story.building'>
-        Name a big animal?<input type='text' ng-model='story.biganimal'>
-        An action<input type='text' ng-model='story.action'>
+        What is your name? <input type='text' name='' ng-model='story.name'><br>
+        What is your favorite animal? <input type='text' ng-model='story.animal'><br>
+        Name a kind of building<input type='text' ng-model='story.building'><br>
+        Name a big animal?<input type='text' ng-model='story.biganimal'><br>
+        An action<input type='text' ng-model='story.action'><br>
 
 
-        <button ng-click=buildStory() ng-class='btn-success'>Build your story</button>
+        <button ng-click=buildStory1() ng-class='btn-success'>Build your story</button>
         </form>
       <div class='col-md-2'></div>
 
