--- a/views/littlePigStory.html
+++ b/views/littlePigStory.html
@@ -1,13 +1,13 @@
 <div class="row" ng-show='myForm'>
   <div class='col-md-2'></div>
     <div class='col-md-8' id='formpage'>
-      <h1>Little Buddy</h1>
-      <form class='form-group' id='litte_buddy'>
+      <h1> NEW Three Little Pigs</h1>
+      <form class='form-group' id='litte_pig'>
       What is your name? <input type='text' name='' ng-model='story.name'><br>
+      Pick a number. <input type='number' name='' ng-model='story.number'><br>
       What is your favorite animal? <input type='text' ng-model='story.animal'><br>
-      Name a body part<input type='text' ng-model='story.bodyPart'><br>
-      What is your Favorite color?<input type='text' ng-model='story.color'><br>
-      Some thing that is your favorite color.<input type='text' ng-model='story.coloreditem'><br>
+      Name a kind of building<input type='text' ng-model='story.building'><br>
+      Name a big animal?<input type='text' ng-model='story.biganimal'><br>
       An action<input type='text' ng-model='story.action'><br>
 
 
@@ -22,9 +22,11 @@
 <div class="row" ng-show='myStory'>
   <div class='col-md-2'></div>
   <div class='col-md-8' id='page'>
-    <h1>Your story</h1>
-    <p>{{story.name}} had a little {{story.animal}} it's {{story.bodyPart}} were {{story.color}} as {{story.coloreditem}}. Every where {{story.name}} went, the {{story.animal}} was sure to {{story.action}}.</p>
+    <h1>{{story.name}}'s' story</h1>
+    <P>Once there were {{story.number}} {{story.animal}}'s. They built a brick {{story.building}}. The big bad {{story.biganimal}} tried to {{story.action}} down the {{story.building}}. But he couldn't and the {{story.number}} {{story.animal}}s were safe.</P>
   <button ng-click='tableContents()' ng-class='btn-success'>Return to Table of Contents</button>
+
   </div>
   <div class='col-md-2'></div>
-</div>
+
+</div><!--end row -->
