--- a/css/form.css
+++ b/css/form.css
@@ -14,6 +14,8 @@ form {
   border-width: 3px;
   border-style: inset;
   background-color:rgba(241, 241, 212, 0.98);
+  padding-top: 6px;
+  padding-bottom: 12px;
 
 }
 form {
@@ -26,4 +28,9 @@ box-shadow: 12px 12px 11px 0px rgb(36, 188, 236);
 }*/
  h1 {
   color: red;
+ }
+
+ .end {
+  text-align: center;
+  font-weight: bold;
  }
