--- a/css/story.css
+++ b/css/story.css
@@ -7,9 +7,8 @@ body {
   font-size: 3em;
   margin-top: 10px;
   border-radius: 6px;
+  padding-bottom: 12px;
   /*border-top-left-radius:6% 30%;
   border-top-right-radius:6% 30%;*/
-
-
-
 }
+
