--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,8 @@
 
           <h1>Welcome to Fun in the Blanks</h1>
 
-          <button ng-click=chapters()>Chapters</button>
+          <button class='btn btn-warning btn-lg btn-block' ng-click='chapters()'>Chapters</button>
+          <button class='btn btn-info btn-lg btn-block' ng-click='howto()'>How To Play</button>
         </div>
       </div>
     </div><!--end main -->
