--- a/css/toc.css
+++ b/css/toc.css
@@ -8,4 +8,12 @@
 div {
 }
 
+button {
+  font-size: 3em;
+}
+
+.btn-info, .btn-success, .btn-warning, .btn-danger {
+  font-size: 2.5em;
+  text-shadow: black;
+}
 
