--- a/views/beanStalkStory.html
+++ b/views/beanStalkStory.html
@@ -51,7 +51,7 @@
 <div class="row" ng-show='myStory'>
   <div class='col-md-2'></div>
   <div class='col-md-8' id='page'>
-    <h1>{{name}}'s and the Beanstalk</h1>
+    <h1>{{story.name}}'s and the Beanstalk</h1>
     <p>One day {{story.name}} planted some magic beans. Overnight the beans grew into a giant beanstalk that streched into the clouds. {{story.name}} climbed the beanstalk and saw a huge {{story.building}}.
     <P> {{story.name}} {{story.action}} into the {{story.building}} and saw a {{story.color}} {{story.animal}} trapped in a large cage. The {{story.animal}} looked very sad. So {{story.name}} decided to free it.
     <P> As {{story.name}} was opening the cage, The Giant {{story.action2}} into the room. {{story.name}} grabbed the {{story.animal}} and ran through the Giant's legs and out the door. The Giant chased them to the beanstalk. But {{story.name}} was too fast and slid down the beanstalk. Once at the bottom {{story.name}} grabbed a {{story.tool}} and chopped down the beanstalk so the Giant could not follow.</p>
