--- a/views/lambStory.html
+++ b/views/lambStory.html
@@ -55,6 +55,7 @@
     <h1>{{story.name}}'s Little Buddy</h1>
     <p>{{story.name}} had a little {{story.animal}} it's {{story.bodyPart}} were {{story.color}} as {{story.coloreditem}}. Every where {{story.name}} went, the {{story.animal}} was sure to {{story.action}}.</p>
     <div class='end'>The End</div>
+    <button ng-click='windowprint()'>Print Story</button>
   <button ng-click='tableContents()' ng-class='btn-success'>Return to Table of Contents</button>
   </div>
   <div class='col-md-2'></div>
