--- a/css/form.css
+++ b/css/form.css
@@ -13,15 +13,15 @@ form {
   border-color: blue;
   border-width: 3px;
   border-style: inset;
-  background-color:rgba(241, 241, 212, 0.98);
+  background-color:rgba(93, 249, 37, 1);
   padding-top: 20px;
   padding-bottom: 12px;
 
 }
 form {
--webkit-box-shadow: 5px 5px 3px 0px #ddd;
+-webkit-box-shadow: 11px 5px 3px 0px #ddd;
 -moz-box-shadow: 5px 5px 3px 0px #ddd;
-box-shadow: 12px 12px 11px 0px rgb(36, 188, 236);
+box-shadow: 12px 12px 11px 0px rebeccapurple;
 }
 /*input {
   font-size: 3em;
