angular fire connected

--- a/views/howto.html
+++ b/views/howto.html
@@ -12,12 +12,12 @@ or play alone.
 
 <div id='grammar'><b>Grammar</b>
   <ol>
-    <li>Noun: person, place, or thing.</li>
-    <li>Verb: An Action word.</li>
-    <li>Location:</li>
-    <li>Excalmation:</li>
-    <li>Adjective:</li>
-    <li>Adverb:</li>
+    <li><strong>Noun:</strong> person, place,</small> or thing.</li>
+    <li><strong>Verb:</strong> An Action word.</li>
+    <li><strong>Location:</strong></li>
+    <li><strong>Excalmation:</strong></li>
+    <li><strong>Adjective:</strong></li>
+    <li><strong>Adverb:</strong></li>
   </ol>
 </div>
 
