--- a/css/how.css
+++ b/css/how.css
@@ -1,5 +1,6 @@
 #title {
   color: white;
+
 }
 
 /* ////// How to Play instructions //////// */
@@ -9,7 +10,7 @@
   font-size: 2em;
   margin-top: 10px;
   border-radius: 6px;
-  padding-: 12px;
+  padding-top: 12px;
   padding-left: 60px;
   padding-bottom: 12px;
   padding-right: 60px;
@@ -17,7 +18,7 @@
   border-radius: 20px;
   border-width: 6px;
   border-style: solid;
-  border-color: rgb(134, 63, 63);
+  border-color: rgb(27, 27, 63);
 }
 
 /* ////// Grammar notes //////// */
@@ -35,4 +36,8 @@
 
 ol li{
   text-align: left;
+}
+
+.btn {
+  text-align: center;
 }
