--- a/css/toc.css
+++ b/css/toc.css
@@ -5,15 +5,16 @@
   text-align: center;
  }
 
-div {
-}
-
 /*button {
   font-size: 3em;
 }
 */
 .btn-info, .btn-success, .btn-warning, .btn-danger {
-  font-size: 2.5em;
+  font-size: 1.95em;
   text-shadow: black;
+  text-align: center;
 }
 
+#toc_button {
+  text-align: center;
+}
