--- a/views/littlePigStory.html
+++ b/views/littlePigStory.html
@@ -40,7 +40,7 @@
       </div><br>
 
 
-    <button ng-click='buildStory()' ng-class='btn-success'>Build your story</button>
+    <button ng-click='buildStory()' class='btn-success'>Build your story</button>
     </form>
   </div>
   <div class='col-md-2'></div>
@@ -55,7 +55,7 @@
     <P>Once there were {{story.number}} {{story.animal}}. They built a brick {{story.building}}. The big bad {{story.biganimal}} tried to {{story.action}} down the {{story.building}}. But he couldn't and the {{story.number}} {{story.animal}} were safe.</P>
     <div class='end'>The End</div>
 
-    <button ng-click='tableContents()' ng-class='btn-success'>Return to Table of Contents</button>
+    <button ng-click='tableContents()' class='btn-success'>Return to Table of Contents</button>
 
   </div>
   <div class='col-md-2'></div>
