--- a/views/lambStory.html
+++ b/views/lambStory.html
@@ -41,7 +41,7 @@
       </div><br>
 
 
-      <button ng-click='buildStory()' class='btn btn-info'>Build your story</button>
+      <button ng-click='buildStory()' class='btn btn-info' id='build'>Build your story</button>
       </form>
     </div>
   <div class='col-md-2'></div>
@@ -50,13 +50,15 @@
 
 
 <div class="row" ng-show='myStory'>
+    <h1>Fun in the Blanks</h1>
   <div class='col-md-2'></div>
+
   <div class='col-md-8' id='page'>
     <h1>{{story.name}}'s Little Buddy</h1>
     <p>{{story.name}} had a little {{story.animal}} it's {{story.bodyPart}} were {{story.color}} as {{story.coloreditem}}. Every where {{story.name}} went, the {{story.animal}} was sure to {{story.action}}.</p>
     <div class='end'>The End</div>
 <!--     <button ng-click='windowprint()'>Print Story</button> -->
-  <button ng-click='tableContents()' class='btn-success'>Return to Table of Contents</button>
+  <div class='button'><button ng-click='tableContents()' class='btn-primary'>Return to Table of Contents</button></div>
   </div>
   <div class='col-md-2'></div>
 </div>
