--- a/css/form.css
+++ b/css/form.css
@@ -9,13 +9,14 @@ form, input {
 }
 
 form {
-  width: 85%;
-  border-color: blue;
-  border-width: 3px;
-  border-style: inset;
-  background-color:rgba(93, 249, 37, 1);
+  width: 100%;
+  border-color: black;
+  border-width: 5px;
+  border-style: solid;
+  background-color:white; /* dkgreen 76,174, 76,1 93,249,37,1*/
   padding-top: 20px;
   padding-bottom: 12px;
+  border-radius: 5%;
 
 }
 form {
@@ -23,11 +24,12 @@ form {
 -moz-box-shadow: 5px 5px 3px 0px #ddd;
 box-shadow: 12px 12px 11px 0px rebeccapurple;
 }
-/*input {
-  font-size: 3em;
-}*/
- h1 {
-  color: red;
- }
 
+input{
+  background-color:rgba(70, 184, 218, 0.95);
+  color: white;
+}
+input[type=text]:focus{
+  background-color: rebeccapurple;
+}
 
