--- a/css/how.css
+++ b/css/how.css
@@ -1,6 +1,5 @@
 #title {
   color: white;
-
 }
 
 /* ////// How to Play instructions //////// */
@@ -19,6 +18,7 @@
   border-width: 6px;
   border-style: solid;
   border-color: rgb(27, 27, 63);
+  text-indent: 20px;
 }
 
 /* ////// Grammar notes //////// */
@@ -30,7 +30,9 @@
   border-width: 6px;
   border-style: solid;
   border-color: rgb(27, 27, 63);
-  padding: 20px;
+  padding: 30px;
+  margin: 20px;
+  text-indent: 20px;
 }
 
 
@@ -38,6 +40,3 @@ ol li{
   text-align: left;
 }
 
-.btn {
-  text-align: center;
-}
