--- a/css/toc.css
+++ b/css/toc.css
@@ -1,4 +1,3 @@
-
  ul, li{
   list-style-type: none;
   padding-right: 4px;
@@ -9,12 +8,70 @@
   font-size: 3em;
 }
 */
-.btn-info, .btn-success, .btn-warning, .btn-danger {
-  font-size: 1.95em;
+.btn-info, .btn-success, .btn-warning, .btn-danger, .btn-default {
+  font-size: 1.75em;
   text-shadow: black;
   text-align: center;
+  border-radius: 50%;
+  word-spacing: -0.125em;
+  border-color: rgb(0, 0, 0);
+  border-style: solid;
+  border-width: 3px;
+  text-shadow: 2px 2px 2px #000000;
+  -webkit-transition: all 0s ease-out;
+  -moz-transition: all 0s ease-out;
+  -o-transition: all 0s ease-out;
+  -ms-transition: all 0s ease-out;
+  transition: all 0s ease-out;
+}
+
+.btn.lamb:before{
+  border-right: solid 1px #2E4476;
+  background: #3B5999;
+
+  -webkit-box-shadow: 0px 5px 0px 0px #2E4476;
+  box-shadow: 0px 5px 0px 0px #2E4476;
+}
+
+.btn.lamb:active:before {
+  -webkit-box-shadow: 0px 5px 0px 0px #2E4476, 6px 4px 2px rgba(0,0,0,0.3);
+  box-shadow: 0px 5px 0px 0px #2E4476, 6px 4px 2px rgba(0,0,0,0.3);
+}
+
+/* Return to TOC button*/
+.btn-primary {
+  font-size: 1.75em;
+  text-shadow: black;
+  text-align: center;
+  border-radius: 20%;
+  word-spacing: -0.125em;
+  border-color: rgb(0, 0, 0);
+  border-style: solid;
+  border-width: 4px;
+  text-shadow: 2px 2px 2px #000000;
+}
+
+#build {
+  font-size: 1.75em;
+  text-shadow: black;
+  text-align: center;
+  border-radius: 20%;
+  word-spacing: -0.125em;
+  border-color: rgb(0, 0, 0);
+  border-style: solid;
+  border-width: 3px;
+  background-color: rebeccapurple;
+}
+
+#toc {
+  font-size: 150%;
+  color: #46b8da;;
 }
 
 #toc_button {
   text-align: center;
+}
+
+#welcome {
+  color: white;
 }
