--- a/views/howto.html
+++ b/views/howto.html
@@ -1,7 +1,7 @@
 <h1>Fun in The Blanks</h1>
 <div class="row">
-  <div class='col-md-4'></div>
-  <div class='col-md-4'>
+  <div class='col-md-3'></div>
+  <div class='col-md-6'>
   <h1 id='title'>How to Play</h1>
 
   <div id='rules'><b>Fun in the Blanks</b> is a creatvie game that allows you and a child create their own fairy tale story.<br>
@@ -21,11 +21,11 @@ Since the story is hidden until the button is clicked you can play alone.
   </ol>
 </div>
 
-  <button ng-click='homePage()' class='btn btn-primary btn-lg toc_button '>Return to Main Page</button>
+  <div class='button'><button ng-click='homePage()' class='btn btn-primary btn-lg toc_button '>Return to Main Page</button></div>
 
   </div><!--end of rules div -->
 
   </div>
-  <div class='col-md-4'></div>
+  <div class='col-md-3'></div>
 </div><!--end row -->
 
