--- a/views/littlePigStory.html
+++ b/views/littlePigStory.html
@@ -52,9 +52,9 @@
   <h1>Fun in the Blanks</h1>
   <div class='col-md-2'></div>
   <div class='col-md-8' id='page'>
-    <h1>{{story.name}}'s' {{story.number}} {{story.animal}}</h1>
+    <h1>{{story.name}}'s {{story.number}} {{story.animal}}</h1>
     <P>Once there were {{story.number}} {{story.animal}}. They built a brick {{story.building}}. The big bad {{story.biganimal}} tried to {{story.action}} down the {{story.building}}. But he couldn't and the {{story.number}} {{story.animal}} were safe.</P>
-    <div class='end'>The End</div>
+    <div class='end'><i class="fa fa-smile-o"></i> The End<i class="fa fa-smile-o"></i></div>
 
     <div class='button'><button ng-click='tableContents()' class='btn-primary'>Return to Table of Contents</button></div>
 
