--- a/css/how.css
+++ b/css/how.css
@@ -5,7 +5,7 @@
 /* ////// How to Play instructions //////// */
 
 #rules {
-  background-color: rgba(241, 241, 212, 0.98);
+  background-color: rgba(98, 160, 219, 0.98);
   font-size: 2em;
   margin-top: 10px;
   border-radius: 6px;
@@ -31,7 +31,7 @@
   border-style: solid;
   border-color: rgb(27, 27, 63);
   padding: 30px;
-  margin: 20px;
+  margin-bottom: 20px;
   text-indent: 20px;
 }
 
