--- a/css/toc.css
+++ b/css/toc.css
@@ -1,13 +1,9 @@
- ul, li{
+/* ul, li{
   list-style-type: none;
   padding-right: 4px;
   text-align: center;
- }
+ }*/
 
-/*button {
-  font-size: 3em;
-}
-*/
 .btn-info, .btn-success, .btn-warning, .btn-danger, .btn-default {
   font-size: 1.75em;
   text-shadow: black;
@@ -25,7 +21,7 @@
   transition: all 0s ease-out;
 }
 
-.btn.lamb:before{
+/*.btn.lamb:before{
   border-right: solid 1px #2E4476;
   background: #3B5999;
 
@@ -37,7 +33,7 @@
   -webkit-box-shadow: 0px 5px 0px 0px #2E4476, 6px 4px 2px rgba(0,0,0,0.3);
   box-shadow: 0px 5px 0px 0px #2E4476, 6px 4px 2px rgba(0,0,0,0.3);
 }
-
+*/
 /* Return to TOC button*/
 .btn-primary {
   font-size: 1.75em;
@@ -46,10 +42,14 @@
   border-radius: 20%;
   word-spacing: -0.125em;
   border-color: rgb(0, 0, 0);
-  border-style: solid;
+  border-style: inset;
   border-width: 4px;
   text-shadow: 2px 2px 2px #000000;
+  /*background-color: #2A09B0;*/
+
 }
+
+
 
 #build {
   font-size: 1.75em;
@@ -65,7 +65,8 @@
 
 #toc {
   font-size: 150%;
-  color: #46b8da;;
+  color: #2A09B0;
+  text-shadow: #006600;
 }
 
 #toc_button {
