--- a/views/howto.html
+++ b/views/howto.html
@@ -16,7 +16,7 @@ Since the story is hidden until the button is clicked you can play alone.
     <li><strong>Adverb:</strong> Tells how something is done.</li>
     <li><strong>Excalmation:</strong> Wow!, D'oh!, Wozwers!</li>
     <li><strong>Location:</strong> A place</li>
-    <li><strong>Noun:</strong> person, place, or thing.</li>
+    <li><strong>Noun:</strong> Person, Place, or Thing.</li>
     <li><strong>Verb:</strong> An Action word.</li>
   </ol>
 </div>
