--- a/views/lambStory.html
+++ b/views/lambStory.html
@@ -41,7 +41,7 @@
       </div><br>
 
 
-      <button ng-click='buildStory()' class='btn btn-info' id='build'>Build your story</button>
+      <button ng-click='buildStory()' class='btn btn-primary' id='build'>Build your story</button>
       </form>
     </div>
   <div class='col-md-2'></div>
