--- a/css/toc.css
+++ b/css/toc.css
@@ -1,8 +1,8 @@
-/* ul, li{
+ ul, li{
   list-style-type: none;
   padding-right: 4px;
   text-align: center;
- }*/
+ }
 
 .btn-info, .btn-success, .btn-warning, .btn-danger, .btn-default {
   font-size: 1.75em;
@@ -14,11 +14,11 @@
   border-style: solid;
   border-width: 3px;
   text-shadow: 2px 2px 2px #000000;
-  -webkit-transition: all 0s ease-out;
+/*  -webkit-transition: all 0s ease-out;
   -moz-transition: all 0s ease-out;
   -o-transition: all 0s ease-out;
   -ms-transition: all 0s ease-out;
-  transition: all 0s ease-out;
+  transition: all 0s ease-out;*/
 }
 
 /*.btn.lamb:before{
@@ -50,7 +50,7 @@
 }
 
 
-
+/*  Build your Story button */
 #build {
   font-size: 1.75em;
   text-shadow: black;
@@ -60,7 +60,13 @@
   border-color: rgb(0, 0, 0);
   border-style: solid;
   border-width: 3px;
-  background-color: rebeccapurple;
+  background-color: #43009B;
+
+}
+
+#build .btn-active{
+   background-color: #43009B;
+
 }
 
 #toc {
@@ -71,6 +77,10 @@
 
 #toc_button {
   text-align: center;
+}
+
+#toc_button:active{
+  background-color: black;
 }
 
 #welcome {
