--- a/views/beanStalkStory.html
+++ b/views/beanStalkStory.html
@@ -41,7 +41,7 @@
       </div><br>
 
 
-      <button ng-click='buildStory()' class='btn-success' id='build'>Build your story</button>
+      <button ng-click='buildStory()' class='btn-warning' id='build'>Build your story</button>
       </form>
     </div>
   <div class='col-md-2'></div>
