--- a/views/littlePigStory.html
+++ b/views/littlePigStory.html
@@ -40,7 +40,7 @@
       </div><br>
 
 
-    <button ng-click='buildStory()' class='btn-success' id='build'>Build your story</button>
+    <button ng-click='buildStory()' class='btn-primary' id='build'>Build your story</button>
     </form>
   </div>
   <div class='col-md-2'></div>
@@ -54,7 +54,7 @@
   <div class='col-md-8' id='page'>
     <h1>{{story.name}}'s {{story.number}} {{story.animal}}</h1>
     <P>Once there were {{story.number}} {{story.animal}}. They built a brick {{story.building}}. The big bad {{story.biganimal}} tried to {{story.action}} down the {{story.building}}. But he couldn't and the {{story.number}} {{story.animal}} were safe.</P>
-    <div class='end'><i class="fa fa-smile-o"></i> The End<i class="fa fa-smile-o"></i></div>
+    <div class='end'><i class="fa fa-book"></i> The End<i class="fa fa-book"></i></div>
 
     <div class='button'><button ng-click='tableContents()' class='btn-primary'>Return to Table of Contents</button></div>
 
