--- a/views/lambStory.html
+++ b/views/lambStory.html
@@ -22,7 +22,7 @@
         <input type='text' ng-model='story.bodyPart'>
       </div><br>
       <div class='col-md-4'>
-      What is your Favorite color?
+      What is your Favorite color?s
       </div>
       <div>
         <input type='text' ng-model='story.color'>
