--- a/views/howto.html
+++ b/views/howto.html
@@ -6,22 +6,22 @@
 
   <div id='rules'><b>Fun in the Blanks</b> is a creatvie game that allows you and a child create their own fairy tale story.<br>
 
-<P>To play, open up any chapter. Ask the child for requested information in the prompts. Enter their answer. Tap the TAB key to go to the next blank., repeat untill all the blanks are filled. Once the form is filled out, click the "Build Your Story" button. The game will then take your words and put them into the story.
+<P>To play, open up any chapter. Ask the child for requested information in the prompts. Enter their answer. Have the child spell the word with you. Tap the TAB key to go to the next blank., repeat untill all the blanks are filled. Once the form is filled out, click the "Build Your Story" button. The game will then take your words and put them into the story.
 Since the story is hidden until the button is clicked you can play alone.
 <P>Read the story with the child.
 
 <div id='grammar'><b>Grammar</b>
   <ol>
     <li><strong>Adjective:</strong> A desciptive word that gives more detail about an item.</li>
-    <li><strong>Adverb:</strong> Tells how something is done.</li>
+    <li><strong>Adverb:</strong> Tells how something is done and modfies a verb. Slowly, Quickly</li>
     <li><strong>Excalmation:</strong> Wow!, D'oh!, Wozwers!</li>
     <li><strong>Location:</strong> A place</li>
     <li><strong>Noun:</strong> Person, Place, or Thing.</li>
-    <li><strong>Verb:</strong> An Action word.</li>
+    <li><strong>Verb:</strong> An Action word. An activity.</li>
   </ol>
 </div>
 
-  <div class='button'><button ng-click='homePage()' class='btn btn-primary btn-lg toc_button '>Return to Main Page</button></div>
+  <div class='button'><button ng-click='homePage()' class='btn btn-primary btn-lg toc_button'>Return to Main Page</button></div>
 
   </div><!--end of rules div -->
 
