--- a/views/midasStory.html
+++ b/views/midasStory.html
@@ -16,10 +16,10 @@
         <input type='text' ng-model='story.place'>
       </div><br>
       <div class='col-md-4'>
-        Name some kind of food.
+        A toy.(plural)
       </div>
       <div>
-        <input type='text' ng-model='story.food'>
+        <input type='text' ng-model='story.toy'>
       </div><br>
       <div class='col-md-4'>
       make a funny sound.
@@ -28,10 +28,11 @@
         <input type='text' ng-model='story.sound'>
       </div><br>
       <div class='col-md-4'>
-      a noun.
+      a royal title.<br>
+      <font color="#2a09b0">King, Queen, Prince or Princess</font>
       </div>
       <div>
-        <input type='text' ng-model='story.noun'>
+        <input type='text' ng-model='story.monarch'>
       </div><br>
       <div class='col-md-4'>
       A container.
@@ -53,12 +54,12 @@
   <h1>Fun in the Blanks</h1>
   <div class='col-md-2'></div>
   <div class='col-md-8' id='page'>
-    <h1>{{story.name}} in Don't Touch That.</h1>
-    <p> {{story.name}}  loved {{story.food}}. {{story.name}} would spend hours in the {{story.place}} counting {{story.food}}. There were {{story.food}} in boxes, {{story.food}} in bags and {{story.food}} in bowls. </p>
-    <p>One day {{story.name}} spotted a fairy in the {{story.place}}. {{story.name}} grabded a {{story.container}}
-and crept up on the fairy. With a quick jump and a {{story.sound}}, caught the fairy in the {{story.container}}. The fairy asked to be freed. The only would if the fairy granted a wish. {{story.name}} he wish was for everthing {{story.name}} touched to turn to {{story.food}}.</p>
-<P>The fairy agreeded, so {{story.name}} opened the {{story.container}} and the fairy flew up and said "Everything you touch will be turned to {{story.food}}". {{story.name}} tested the spell and touched a chair, it turned to {{story.food}}, touched a plant  it turned to {{story.food}}. Then {{story.name}} grabbed a soda cup it turned to {{story.food}}.
-{{story.name}} was so happy and hugged the dog. The dog turned into {{story.food}}. No the cried. he beggged the fairy to save his dog. so the fairy undid the spell. <div class='end'>The End</div>
+
+    <h1>{{story.name}} in The Midas Touch.</h1>
+    <p> {{story.monarch}} {{story.name}} loved {{story.toy}}. {{story.name}} would spend hours in the {{story.place}} counting {{story.toy}}. There were {{story.toy}} in boxes, {{story.toy}} in bags and {{story.toy}} in cabinets. </p>
+    <p>One day {{story.name}} spotted a fairy in the {{story.place}}. The {{story.monarch}} grabded a {{story.container}} and crept up on the fairy. With a quick jump and a {{story.sound}}, {{story.name}} caught the fairy in the {{story.container}}. The fairy asked to be freed. The {{story.monarch}} would only free the fairy if she used her magic and granted a wish. </p>
+<P>The fairy agreed, so {{story.name}} opened the {{story.container}}. {{story.name}} wished was for everthing {{story.monarch}} touched to turn to {{story.toy}}. The fairy flew up and said "Everything you touch will be turned to {{story.toy}}". {{story.name}} tested the spell and touched a chair, it turned to {{story.toy}}, touched a plant it turned to {{story.toy}}. Then {{story.name}} was thirsty and grabbed a soda cup it turned to {{story.toy}}. {{story.name}} was so happy and hugged the dog.
+<P>The dog turned into {{story.toy}}. No the {{story.monarch}} cried. The {{story.monarch}} begged the fairy to save the dog. The {{story.monarch}} apologized for trapping the fairy, so the fairy undid the spell. {{story.name}} was happy to have the dog back.<div class='end'>The End</div>
 <!--     <button ng-click='windowprint()'>Print Story</button> -->
 
   <div class='button'><button ng-click='tableContents()' class='btn btn-primary'>Return to Table of Contents</button></div>
