--- a/css/form.css
+++ b/css/form.css
@@ -1,6 +1,5 @@
 body{
   text-align: center;
-
 }
 
 form, input {
@@ -14,24 +13,20 @@ form {
   border-color: black;
   border-width: 5px;
   border-style: solid;
-  background-color: rgba(98, 160, 219, 0.98); /* dkgreen 76,174, 76,1 93,249,37,1*/
+  background-color: rgba(98, 160, 219, 0.98);
   padding-top: 20px;
   padding-bottom: 12px;
   border-radius: 5%;
-
 }
-/*form {
--webkit-box-shadow: 11px 5px 3px 0px #ddd;
--moz-box-shadow: 5px 5px 3px 0px #ddd;
-box-shadow: 12px 12px 11px 0px rebeccapurple;
-}*/
+
 
 input{
-  background-color:white; /*rgba(70, 184, 218, 0.95);*/
+  background-color:white;
   color: #43009b;
   border-color: black;
   border-width:4px;
 }
+
 input:focus{
   background-color: #43009b;
   color: white ;
