--- a/css/story.css
+++ b/css/story.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #2a09b0;/*rgba(21, 105, 149, 1); /*rgba(227, 249, 37, 1); */
+  background-color: #2a09b0;
 }
 
 h1 {
@@ -10,13 +10,11 @@ h1 {
 
 
 #page {
-  background-color: white; /*rgba(93, 249, 37, 1);/*76, 174, 76, 1*/
+  background-color: white;
   font-size: 1.95em;
   margin-top: 10px;
   border-radius: 6px;
   padding-bottom: 12px;
-  /*border-top-left-radius:6% 30%;
-  border-top-right-radius:6% 30%;*/
   text-align: left;
   text-indent: 20px;
   border-width: 5px;
@@ -35,8 +33,8 @@ h1 {
   text-align: center;
  }
 
-/* .story.name{
-  color: red;
+/*.name{
+  font color: red;
  }*/
 
 
