--- a/css/toc.css
+++ b/css/toc.css
@@ -21,7 +21,7 @@
   transition: all 0s ease-out;*/
 }
 
-/*.btn.lamb:before{
+.btn.lamb:before{
   border-right: solid 1px #2E4476;
   background: #3B5999;
 
@@ -33,7 +33,8 @@
   -webkit-box-shadow: 0px 5px 0px 0px #2E4476, 6px 4px 2px rgba(0,0,0,0.3);
   box-shadow: 0px 5px 0px 0px #2E4476, 6px 4px 2px rgba(0,0,0,0.3);
 }
-*/
+
+
 /* Return to TOC button*/
 .btn-primary {
   font-size: 1.75em;
