--- a/views/howto.html
+++ b/views/howto.html
@@ -12,7 +12,7 @@ Since the story is hidden until the button is clicked you can play alone.
 
 <div id='grammar'><b>Grammar</b>
   <ol>
-    <li><strong>Adjective:</strong> A desciptive word that gives more detail about an item.</li>
+    <li><strong>Adjective:</strong> A descriptive word that gives more detail about an item.</li>
     <li><strong>Adverb:</strong> Tells how something is done and modfies a verb. Slowly, Quickly</li>
     <li><strong>Excalmation:</strong> Wow!, D'oh!, Wozwers!</li>
     <li><strong>Location:</strong> A place</li>
