--- a/views/beanStalkStory.html
+++ b/views/beanStalkStory.html
@@ -22,19 +22,19 @@
         <input type='text' ng-model='story.building'>
       </div><br>
       <div class='col-md-4'>
-        Name a big tool.
+        Name a tool or kitchen utensil
       </div>
       <div>
         <input type='text' ng-model='story.tool'>
       </div><br>
       <div class='col-md-4'>
-        Name a exciting action
+        Verb a fun activity (past tense)
       </div>
       <div>
         <input type='text' ng-model='story.action'>
       </div><br>
       <div class='col-md-4'>
-        Name a scary action
+       Verb (past tense)
       </div>
       <div>
         <input type='text' ng-model='story.action2'>
