--- a/views/foodieStory.html
+++ b/views/foodieStory.html
@@ -53,8 +53,8 @@
   <h1>Fun in the Blanks</h1>
   <div class='col-md-2'></div>
   <div class='col-md-8' id='page'>
-    <h1>{{story.name}} in A Foodies Tale</h1>
-    <p>Once upon a {{story.noun}}, there was a {{story.animal}} that loved {{story.food}}. The {{story.animal}} was named {{story.name}}. {{story.name}} wanted to eat {{story.food}}, every day for breakfeast, lunch, and dinner. One day {{story.name}} ate so much {{story.food}} that the {{story.animal}} turned into to {{story.food}} {{story.condiment}}.</p>
+    <h1><b>{{story.name}}</b> in A Foodies Tale</h1>
+    <p>Once upon a {{story.noun}}, there was a {{story.animal}} that loved {{story.food}}. The {{story.animal}} was named <b>{{story.name}}</b>. <b>{{story.name}}</b> wanted to eat {{story.food}}, every day for breakfeast, lunch, and dinner. One day <b>{{story.name}}</b> ate so much {{story.food}} that the {{story.animal}} turned into to {{story.food}} {{story.condiment}}.</p>
     <div class='end'>The End</div>
 <!--     <button ng-click='windowprint()'>Print Story</button> -->
 
