--- a/views/demoStory.html
+++ b/views/demoStory.html
@@ -57,16 +57,15 @@
     <h1>{{story.name}}'s Little Buddy</h1>
 once uopn a time,
 we coded in sublime
-wew coded in bliss,
+we coded in bliss,
 till we learned of this
-???
-broken div
-???
-push it git hub
+???please forgive
+ a broken div
+??? time for lunch grab some grub, lets hit the pub and
+and push it git hub
 
     <p>{{story.name}} had a little {{story.animal}} it's {{story.bodyPart}} were {{story.color}} as {{story.coloreditem}}. Every where {{story.name}} went, the {{story.animal}} was sure to {{story.action}}.</p>
     <div class='end'>The End</div>
-<!--     <button ng-click='windowprint()'>Print Story</button> -->
   <div class='button'><button ng-click='tableContents()' class='btn-primary'>Return to Table of Contents</button></div>
   </div>
   <div class='col-md-2'></div>
